<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="background_image">Background Image</string>
    <string name="banner_text">Please enter in the height and weight</string>
    <string name="height_inches">Height (inches)</string>
    <string name="hint_height">64</string>
    <string name="weight_pounds">Weight (pounds)</string>
    <string name="hint_weight">120</string>
    <string name="error_msg_height_or_weight_not_valid">The height and weight values must not be empty and must be greater than 0.</string>

    <string name="bmi">BMI:</string>
    <string name="bmi_group">BMI Group:</string>

    <plurals name="calcs_done">
        <item quantity="one">Calculation done:</item>
        <item quantity="other">Calculations done:</item>
    </plurals>

</resources>