<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!--Banner-->
    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/banner_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <!--Height-->
    <TextView
        android:id="@+id/tv_height"
        style="@style/TextViewStyle"
        android:text="@string/height_inches" />

    <EditText
        android:id="@+id/et_height"
        style="@style/EditTextStyle"
        android:hint="@string/hint_height" />

    <!--Weight-->
    <TextView
        android:id="@+id/tv_weight"
        style="@style/TextViewStyle"
        android:text="@string/weight_pounds" />

    <EditText
        android:id="@+id/et_weight"
        style="@style/EditTextStyle"
        android:hint="@string/hint_weight" />

</LinearLayout>